# anicatch

./: .gitignore  CLAUDE.md  README.en.md  README.md  main.py  pyproject.toml
.clawhub/: lock.json
docs/superpowers/plans/: 2026-04-07-miobt-scraper-implementation.md  2026-04-08-tui-feature-implementation.md
docs/superpowers/specs/: 2026-04-07-miobt-scraper-design.md  2026-04-08-tui-feature-design.md
skills/anicatch/: CLAUDE.md  SKILL.md
skills/anime-download-skill/: SKILL.md
src/anicatch/: __init__.py  __main__.py  config.py  downloader.py  models.py  scraper.py  seasons.py  tui.py  utils.py
src/anime_scrapy/: __init__.py  __main__.py  config.py  downloader.py  models.py  scraper.py  utils.py
