[project]
name = "anime_scrapy"
version = "0.1.0"
description = "miobt.com 动漫资源爬虫"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "browserforge>=1.2.4",
    "curl-cffi>=0.15.0",
    "playwright>=1.58.0",
    "scrapling>=0.2.0",
]

[project.scripts]
anime_scrapy = "anime_scrapy.__main__:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anime_scrapy"]
