[project]
name = "anicatch"
version = "0.1.2"
description = "Anime torrent scraper for miobt.com — browse by season, search, and download via BitTorrent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "isongxw" },
]
keywords = ["anime", "torrent", "scraper", "miobt", "bittorrent", "download"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "browserforge>=1.2.4",
    "curl-cffi>=0.15.0",
    "playwright>=1.58.0",
    "scrapling>=0.2.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "libtorrent>=2.0.11",
    "textual>=0.44.0",
]

[project.urls]
Homepage = "https://github.com/isongxw/anicatch"
Repository = "https://github.com/isongxw/anicatch"

[project.scripts]
anicatch = "anicatch.__main__:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anicatch"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
